# gdpo

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
src/: config.py  evaluate.py  generate.py  train.py
src/algo/: __init__.py  base.py
src/algo/mixins/: __init__.py  instantiate.py  utilities.py
src/algo/offline/: __init__.py  base.py  dpo.py  gdpo.py  sft.py
src/common/: config.py  logger.py  utils.py
src/config/: __init__.py
src/config/accelerate/: ds2.yaml  ds3.yaml  fsdp.yaml  mps.yaml
src/config/template/: chatml.jinja  llama.jinja
src/data/: __init__.py
src/dataset/: __init__.py  base.py  other.py
src/evaluator/: __init__.py  base.py  diversity.py  win.py
src/logger/: __init__.py  base.py  rich.py  wandb.py
src/mixin/: __init__.py  base.py  instantiate.py  utilities.py
src/utils/: dataset.py
